Include Fileupload in start page

--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -40,12 +40,12 @@
                 <div>
                     <!-- Standar Form -->
                     <h4>Upload Event Log for refining</h4>
-                    <form action="" method="post" enctype="multipart/form-data" id="TODO:FileUploadId">
+                    <form action="fileManager" method="post" enctype="multipart/form-data" id="TODO:FileUploadId">
                         <div class="form-inline">
                         <div class="form-group">
-                            <input type="file" name="files[]" id="js-upload-files" multiple>
+                            <input type="file" name="eventLog" id="js-upload-files" multiple>
                         </div>
-                        <button type="submit" class="btn btn-sm btn-primary">Upload files</button>
+                        <button type=submit value=Upload class="btn btn-sm btn-primary">Upload files</button>
                         </div>
                     </form>
 
