--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -40,21 +40,12 @@
                 <div>
                     <!-- Standar Form -->
                     <h4>Upload Event Log for refining</h4>
-<<<<<<< HEAD
-                    <form action="" method="post" enctype="multipart/form-data" id="TODO:FileUploadId">
-                        <div class="form-inline">
-                        <div class="form-group">
-                            <input type="file" name="files[]" id="js-upload-files" multiple>
-                        </div>
-                        <button type="submit" class="btn btn-sm btn-primary">Upload files</button>
-=======
-                    <form action="fileManager" method="post" enctype="multipart/form-data" id="TODO:FileUploadId">
+                    <form action="fileManager" method="post" enctype="multipart/form-data" id="js-upload-form">
                         <div class="form-inline">
                         <div class="form-group">
                             <input type="file" name="eventLog" id="js-upload-files" multiple>
                         </div>
-                        <button type=submit value=Upload class="btn btn-sm btn-primary">Upload files</button>
->>>>>>> f3667f908a6380302f380704bda23c5a17221b8f
+                        <button type=submit value=Upload class="btn btn-sm btn-primary" id="js-upload-submit">Upload files</button>
                         </div>
                     </form>
 
@@ -86,4 +77,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="{{ url_for('static', filename='js/dragDropFileUpload.js') }}"></script>
 </html>
