Frontend file list functionality added

--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -15,12 +15,8 @@
                 <div>
                    <h4>Last uploaded files</h4>
                    <div>
-                        <ul class="list-group">
-                            <li class="list-group-item">File1.xes</li>
-                            <li class="list-group-item">File2.xes</li>
-                            <li class="list-group-item">File3.xes</li>
-                            <li class="list-group-item active">File4.csv</li>
-                            <li class="list-group-item">File5.xes</li>
+                        <ul id="uploadedFiles" class="list-group">
+
                         </ul>
                    </div>
                 </div>
@@ -45,6 +41,9 @@
                         <div class="form-group">
                             <input type="file" name="eventLog" id="js-upload-files" multiple>
                         </div>
+                        <div class="form-group">
+                            <input type="text" name="eventLog" id="file-name-upload">
+                        </div>
                         <button type=submit value=Upload class="btn btn-sm btn-primary" id="js-upload-submit">Upload files</button>
                         </div>
                     </form>
@@ -61,12 +60,8 @@
                     <div>
                     <h4>Last refined files</h4>
                         <div>
-                            <ul class="list-group">
-                                <li class="list-group-item">File1.xes</li>
-                                <li class="list-group-item">File2.xes</li>
-                                <li class="list-group-item active">File3.xes</li>
-                                <li class="list-group-item">File4.csv</li>
-                                <li class="list-group-item">File5.xes</li>
+                            <ul id="refinedFiles" class="list-group">
+
                             </ul>
                         </div>
                     </div>
@@ -74,8 +69,10 @@
         </div>
     </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="{{ url_for('static', filename='js/dragDropFileUpload.js') }}"></script>
+<script src="{{ url_for('static', filename='js/fileList.js') }}"></script>
+<script src="{{ url_for('static', filename='js/init.js') }}"></script>
 </html>
