--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -20,15 +20,10 @@
                         </ul>
                    </div>
                 </div>
-                <div style="margin-top: 200px">
+                <div id="customize" style="margin-top: 200px">
                     <h4>Customize</h4>
                     <div >
-                        <label for="horizontalThreshold">Horizontal threshold: {displayValue}</label>
-                        <input type="range" class="custom-range" min="0" max="1" step="0.1" id="horizontalThreshold"> 
-                        <label for="verticalThreshold">Vertical threshold: {displayValue}</label>
-                        <input type="range" class="custom-range" min="0" max="1" step="0.1" id="verticalThreshold">  
-                        <label for="customRange3">Example range: {displayValue}</label>
-                        <input type="range" class="custom-range" min="0" max="5" step="0.5" id="customRange3">  
+              
                     </div>
                 </div>
             </div>
@@ -75,4 +70,5 @@
 <script src="{{ url_for('static', filename='js/dragDropFileUpload.js') }}"></script>
 <script src="{{ url_for('static', filename='js/fileList.js') }}"></script>
 <script src="{{ url_for('static', filename='js/init.js') }}"></script>
+<script src="{{ url_for('static', filename='js/valuePicker.js') }}"></script>
 </html>
