--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Refining Event Labels</a>
     </nav>
     <div style="margin: 1% 4%">
         <div class="row">
@@ -49,6 +49,8 @@
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
+                </br>
+                    <button id="submit" type="button" class="btn btn-primary">submit</button>
                 </div>
             </div>
             <div class="col">
