--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -50,6 +50,9 @@
                         <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </br>
+                    <textarea style="width: 100%" id="candidateLabels" placeholder="insert candidate labels: a,b,c">
+
+                    </textarea>
                     <button id="submit" type="button" class="btn btn-primary">submit</button>
                 </div>
             </div>
