--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -50,9 +50,7 @@
                         <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </br>
-                    <textarea style="width: 100%" id="candidateLabels" placeholder="insert candidate labels: a,b,c">
-
-                    </textarea>
+                    <textarea style="width: 100%" id="candidateLabels" placeholder="insert candidate labels: a,b,c"></textarea>
                     <button id="submit" type="button" class="btn btn-primary">submit</button>
                 </div>
             </div>
@@ -72,7 +70,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="{{ url_for('static', filename='js/dragDropFileUpload.js') }}"></script>
+<!--<script src="{{ url_for('static', filename='js/dragDropFileUpload.js') }}"></script>-->
 <script src="{{ url_for('static', filename='js/fileList.js') }}"></script>
 <script src="{{ url_for('static', filename='js/init.js') }}"></script>
 <script src="{{ url_for('static', filename='js/valuePicker.js') }}"></script>
