--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -39,7 +39,7 @@
                         <div class="form-group">
                             <input type="text" name="eventLog" id="file-name-upload">
                         </div>
-                        <button type=submit value=Upload class="btn btn-sm btn-primary" id="js-upload-submit">Upload files</button>
+                        <button type="submit" value="send" class="btn btn-sm btn-primary" id="js-upload-submit">Upload files</button>
                         </div>
                     </form>
 
@@ -50,7 +50,8 @@
                         <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </br>
-                    <textarea style="width: 100%" id="candidateLabels" placeholder="insert candidate labels: a,b,c"></textarea>
+                    <h3>Candidate Labels</h3>
+                    <textarea style="width: 100%" id="candidateLabels" placeholder="insert candidate labels:a,b,c"></textarea>
                     <button id="submit" type="button" class="btn btn-primary">submit</button>
                 </div>
             </div>
