--- a/refiningEventLabels/static/css/labelRefinment.css
+++ b/refiningEventLabels/static/css/labelRefinment.css
@@ -16,3 +16,8 @@
     color: #222;
     border-color: #222;
 }
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: gray;
+    opacity: 0.5; /* Firefox */
+  }
