Direct FileUpload for Windows added

--- a/refiningEventLabels/frontend/template/startPage.html
+++ b/refiningEventLabels/frontend/template/startPage.html
@@ -31,7 +31,7 @@
                 <div>
                     <!-- Standar Form -->
                     <h4>Upload Event Log for refining</h4>
-                    <form action="fileManager" method="post" enctype="multipart/form-data" id="js-upload-form">
+                    <form method="post" enctype="multipart/form-data" id="js-upload-form">
                         <div class="form-inline">
                         <div class="form-group">
                             <input type="file" name="eventLog" id="js-upload-files" multiple>
